--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ futures = "0.3"
 tokio = {version = "1.13.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+clap = { version = "4.5.4", features = ["derive"] }
